@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The MovieDB"
-       version="1.4.1"
+       version="1.4.3"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
     <import addon="metadata.common.themoviedb.org" version="1.1.0"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.6"/>
-    <import addon="metadata.common.imdb.com" version="2.1.2"/>
-    <import addon="plugin.video.youtube" version="2.0.3"/>
+    <import addon="metadata.common.imdb.com" version="2.1.3"/>
+    <import addon="plugin.video.youtube" version="2.1.0"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="en"
